kustomize/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: podinfo
  name: podinfo-ingress
spec:
  rules:
  - host: hellonode.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: podinfo
            port: 
              number: 3000
